RESOLVED FIXED240483
Private relay should fail closed for third party loads if the main resource was loaded over private relay
https://bugs.webkit.org/show_bug.cgi?id=240483
Summary Private relay should fail closed for third party loads if the main resource w...
Alex Christensen
Reported 2022-05-16 15:21:03 PDT
Private relay should fail closed for third party loads if the main resource was loaded over private relay
Attachments
Patch (8.42 KB, patch)
2022-05-16 15:25 PDT, Alex Christensen
no flags
Patch (8.25 KB, patch)
2022-05-17 15:19 PDT, Alex Christensen
no flags
reverting patch (6.86 KB, patch)
2022-05-20 15:40 PDT, Alex Christensen
no flags
Patch (4.44 KB, patch)
2022-05-20 20:23 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2022-05-16 15:25:37 PDT
Alex Christensen
Comment 2 2022-05-16 15:25:41 PDT
Alex Christensen
Comment 3 2022-05-17 15:19:28 PDT
EWS
Comment 4 2022-05-17 17:56:41 PDT
Committed r294371 (250670@main): <https://commits.webkit.org/250670@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459518 [details].
WebKit Commit Bot
Comment 5 2022-05-20 15:13:14 PDT
Re-opened since this is blocked by bug 240740
Alex Christensen
Comment 6 2022-05-20 15:40:37 PDT
Created attachment 459629 [details] reverting patch
Alex Christensen
Comment 7 2022-05-20 20:23:12 PDT
Alex Christensen
Comment 8 2022-05-23 09:38:56 PDT
I verified that, when opening several news sites, the patch from 5/17 had some differences between whether it calls _setPrivacyProxyFailClosedForUnreachableNonMainHosts on requests to the same hosts, which would cause different TCP connections to be made, which explains the performance regression. I verified that the patch from 5/20 does not do this.
Chris Dumez
Comment 9 2022-05-23 09:41:39 PDT
Comment on attachment 459635 [details] Patch r=me
EWS
Comment 10 2022-05-24 12:36:10 PDT
Committed r294757 (250925@main): <https://commits.webkit.org/250925@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459635 [details].
Note You need to log in before you can comment on or make changes to this bug.