Cherry-pick b07ce12ec55d. rdar://problem/92697007

Private relay should fail closed for third party loads if the main resource was loaded over private relay
    https://bugs.webkit.org/show_bug.cgi?id=240483
    <rdar://92697007>

    Patch by Alex Christensen <achristensen@webkit.org> on 2022-05-17
    Reviewed by Chris Dumez.

    This re-lands the change from r293861 along with r293481 which should fix problems related to rdar://92336270
    along with r293591 which should fix performance regressions related to rdar://92458995 but was insufficient.
    During a basic browsing test, I found two more places where we were making a NetworkDataTask without setting the
    parameters' top origin, one in the SpeculativeLoad constructor and another in WebLoaderStrategy::preconnectTo.

    * Source/WebKit/NetworkProcess/NetworkCORSPreflightChecker.cpp:
    (WebKit::NetworkCORSPreflightChecker::startPreflight):
    * Source/WebKit/NetworkProcess/cache/NetworkCacheSpeculativeLoad.cpp:
    (WebKit::NetworkCache::SpeculativeLoad::SpeculativeLoad):
    * Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
    (WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):
    * Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (-[WKNetworkSessionDelegate URLSession:dataTask:didReceiveResponse:completionHandler:]):
    (WebKit::NetworkSessionCocoa::createWebSocketTask):
    * Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp:
    (WebKit::WebLoaderStrategy::preconnectTo):

    Canonical link: https://commits.webkit.org/250670@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294371 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.616@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@295188 268f45cc-cd09-0410-ab3c-d52691b4dbfc